bridge_to_transparent.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kured            # Must match `--ds-name`
  namespace: kube-system # Must match `--ds-namespace`
spec:
  selector:
    matchLabels:
      name: kured
  updateStrategy:
   type: RollingUpdate
  template:
    metadata:
      labels:
        name: kured
    spec:
      serviceAccountName: kured
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      hostPID: true # Facilitate entering the host mount namespace via init
      restartPolicy: Always
      containers:
        - name: kured
          image: docker.io/weaveworks/kured:1.2.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true # Give permission to nsenter /proc/1/ns/mnt
          command:
            - /usr/bin/kured
            - --period=15s
#            - --alert-filter-regexp=^RebootRequired$
#            - --blocking-pod-selector=runtime=long,cost=expensive
#            - --blocking-pod-selector=name=temperamental
#            - --blocking-pod-selector=...
#            - --ds-name=kured
#            - --ds-namespace=kube-system
#            - --lock-annotation=weave.works/kured-node-lock
#            - --period=1h
#            - --prometheus-url=http://prometheus.monitoring.svc.cluster.local
#            - --reboot-sentinel=/var/run/reboot-required
#            - --slack-hook-url=https://hooks.slack.com/...
#            - --slack-username=prod

---

apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: bridge2transparent
spec:
  template:
    metadata:
      labels:
        run-once-daemonset: bridge2transparent
    spec:
      containers:
      - name: bridge2transparent
        image: kprabhakar/bridge2transparent:v0.03
        imagePullPolicy: Always
        volumeMounts:
        - name: etc-cni-netd
          mountPath: /node/etc/cni/net.d
          readOnly: false
        - name: var-run
          mountPath: /node/var/run
          readOnly: false
      volumes:
      - name: etc-cni-netd
        hostPath:
          path: /etc/cni/net.d
      - name: var-run
        hostPath:
          path: /var/run
